--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+header{
+    text-align: center;
+    font-size: 40px;
+    background-color: #777b80;
+    color: #0A3871;
+    font-family: 'Chakra Petch', sans-serif;
+    
+}
 main{
     position: relative;
     width: 100vw;
     height: 100vh;
-    background-color: #E5E5E5;
+    background-color: #0A3871;
 }
 .texto{
     position: absolute;
@@ -16,7 +24,8 @@ main{
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
-    background-color: #E5E5E5;
+    background-color: white;
+    border-radius: 24px;
 }
 .texto::placeholder{
     color:#0A3871;
@@ -31,6 +40,7 @@ main{
     border: none;
     outline: none;
 }
+
 .condiciones{
     display: flex;
     flex-direction: row;
@@ -43,12 +53,12 @@ main{
     top: 80%;
 }
 .condiciones p{
+    font-weight: bold;
     font-family: "Inter";
     font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
+    font-size: 16px;
     line-height: 150%;
-    color: rgb(153, 39, 39);
+    color: rgb(250, 11, 11);
     opacity: 0.8;
     flex: none;
     order: 1;
@@ -64,6 +74,12 @@ main{
     left: 12%;
     top: 82%;
 }
+.botones-copiar {
+    display: flex;
+  justify-content: center;
+  margin-top: 16px;
+    
+  }
 .boton-encriptar{
     cursor: pointer;
     align-items: center;
@@ -100,6 +116,22 @@ main{
     text-align: center;
     color: #fff;
 }
+#boton-copiar{
+    cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  padding: 2%;
+  gap: 8px;
+  width: 150px;
+  background-color: #777b80;
+  border: 1px solid #0A3871;
+  border-radius: 24px;
+  font-family: "Inter";
+  font-size: 19px;
+  line-height: 19px;
+  text-align: center;
+  color: #fff;
+    }
 .boton-encriptar:hover{
     margin: 0.5%;
     width: 25%;
@@ -114,6 +146,11 @@ main{
     padding: 1.8%;
     transition: 1s;
     background: rgb(163, 3, 3);
+    color:black
+}
+#boton-copiar:hover{
+    transition: 1s;
+    background: #0c4994;
     color:black
 }
 .encriptado{
@@ -166,6 +203,21 @@ main{
     height: 50%;
     top: 15%;
 }
+footer {
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    background-color: #777b80;
+    color: #ffffff;
+  }
+  
+  footer img {
+    width: 50px;
+  }
+  
+  footer img:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+  }
 
 /*diseño responsivo*/
 @media (max-width:57.5em) {
